Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)
Added XEyes "Toy" to follow mouse

* Improvements:

Improved Configuration parsing: warning when ZEsarUX has been downgraded
Improved Debug Console: better refresh, dynamic width??
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it
- show B register on satisfy condition for DJNZ

Improved View Sprites: 
- sprite is no longer disabled when changing memory pointer
- you can view sprites up to 1024x1024

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump and Disassemble

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)
- Show icon indicators for open apps on ZX Desktop
- Added setting to empty Trash on exit
- Fixed icons zoom level when selecting some machines that use menu gui zoom = 2 (CPC, QL, etc)
- CF2 Floppy icon (+3, CPC, PCW) now is animated when motor is on

Improved ZX Vision:
- Added windows TaskBar
- Added Process ID (PID) for all windows
- Text input fields now handle repeated keys
- Some text input fields now have history of last items, and history is saved on configuration file
- Added function to maximize all windows
- Allow reducing character height
- Improve window list showing spent time on each window and pid of each window/process
- Improve rendering background windows

* Fixes:
