@@ -5847,8 +5847,10 @@ void debug_get_ioports(char *stats_buffer)
 			for (i=0;i<4;i++) {
 					sprintf (buf_linea,"%02X:  %02X\n",i,cpc_gate_registers[i]);
 					sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
-			}		
-			
+			}	
+
+			sprintf (buf_linea,"\nPort DF: %02XH\n",cpc_port_df);
+  			sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);			
 			
 	}	 
 	
