@@ -19,6 +19,7 @@ Added XEyes "Toy" to follow mouse
 Improved Configuration parsing: warning when ZEsarUX has been downgraded
 Improved Debug Console: better refresh, dynamic width??
 Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
+Improved Debug I/O ports window: autoresize content height when do not fit in window
 Improved Debug CPU:
 - switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
 - added (hl), (de), (bc)
